0032597: Coding Rules, Wasm_Window - add missing setter for DevicePixelRatio property